<resources>
    <string name="app_name">DigitalElectrician</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!-- Home Items -->
    <string name="basic">Basic</string>
    <string name="capacitance">Capacitance</string>
    <string name="resistance">Resistance</string>
    <string name="inductance">Inductance</string>
    <string name="pue">PUE</string>
    <string name="nec">NEC</string>
    <string name="cec">CEC</string>
    <string name="iec">IEC</string>
    <string name="conductor">Conductor</string>
    <string name="motor">Motor</string>
    <string name="cable">Cable</string>
    <string name="converter">Converter</string>

    <!-- Basic Items -->
    <string name="ohm_law_dc">Ohm\'s law for DC</string>
    <string name="ohm_law_ac">>Ohm\'s law for AC</string>
    <string name="lc_resonance">LC Resonance</string>
    <string name="y_delta_transform">Y-Δ Transformation</string>
    <string name="electrical_energy">Electrical Energy</string>
    <string name="current_density">Current Density</string>
    <string name="ideal_transformer">Ideal Transformer</string>
    <string name="ac_circuits">AC Circuits</string>
    <string name="contact_protection">Contact Protection. RC Snubbers</string>
    <string name="i_v_r">I = V/R</string>
    <string name="i_p_v">I = P / V</string>
    <string name="i_p_r">I = √(P/R)</string>
    <string name="v_i_r">V = I * R</string>
    <string name="v_p_i">V = P/I</string>
    <string name="v_p_r">V = √(P*R)</string>
    <string name="p_i_v">P = I*V</string>
    <string name="p_i_u00b2_r">P = I² * R</string>
    <string name="p_v_u00b2_r">P = V² / R</string>
    <string name="r_v_i">R = V/I</string>
    <string name="r_p_i_u00b2">R = P / I²</string>
    <string name="r_v_u00b2_p">R = V² / P</string>
    <string name="reset">Reset</string>
    <string name="report">Report</string>

    <string name="current">Current</string>
    <string name="voltage">Voltage</string>
    <string name="power">Power</string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>
</resources>