<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.basic.ohmLawDC.OhmLawDCFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@color/colorAquamarine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textViewOhmLawDCHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="TextView"
                android:textColor="@color/colorDarkMint"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewOhmLawDCValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="TextView"
                android:textColor="@color/colorDarkMint"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorDarkMint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <TextView
                android:id="@+id/textViewOhmLawDCFirstItem"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="TextView"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextOhmLawDCFirstItem"
                android:layout_width="130dp"
                android:layout_height="35dp"
                android:layout_marginStart="40dp"
                android:background="@drawable/round_layout"
                android:ems="10"
                android:inputType="numberDecimal"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/textViewOhmLawDCFirstItem"
                app:layout_constraintStart_toEndOf="@+id/textViewOhmLawDCFirstItem"
                app:layout_constraintTop_toTopOf="@+id/textViewOhmLawDCFirstItem" />

            <Spinner
                android:id="@+id/spinnerTextOhmLawDCFirstUnit"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/round_layout"
                app:layout_constraintBottom_toBottomOf="@+id/editTextOhmLawDCFirstItem"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editTextOhmLawDCFirstItem" />

            <TextView
                android:id="@+id/textViewOhmLawDCSecondItem"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:text="TextView"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textViewOhmLawDCFirstItem"
                app:layout_constraintTop_toBottomOf="@+id/textViewOhmLawDCFirstItem" />

            <EditText
                android:id="@+id/editTextOhmLawDCSecondItem"
                android:layout_width="130dp"
                android:layout_height="35dp"
                android:background="@drawable/round_layout"
                android:ems="10"
                android:inputType="numberDecimal"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/textViewOhmLawDCSecondItem"
                app:layout_constraintStart_toStartOf="@+id/editTextOhmLawDCFirstItem"
                app:layout_constraintTop_toTopOf="@+id/textViewOhmLawDCSecondItem" />

            <Spinner
                android:id="@+id/spinnerTextOhmLawDCSecondUnit"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:background="@drawable/round_layout"
                app:layout_constraintBottom_toBottomOf="@+id/editTextOhmLawDCSecondItem"
                app:layout_constraintEnd_toEndOf="@+id/spinnerTextOhmLawDCFirstUnit"
                app:layout_constraintStart_toStartOf="@+id/spinnerTextOhmLawDCFirstUnit"
                app:layout_constraintTop_toTopOf="@+id/editTextOhmLawDCSecondItem" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button1OhmLawDC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/i_v_r"
            android:background="@color/colorColumbiaBlue"
            app:layout_constraintEnd_toStartOf="@+id/button2OhmLawDC"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button2OhmLawDC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/i_p_v"
            android:background="@color/colorColumbiaBlue"
            app:layout_constraintBottom_toBottomOf="@+id/button1OhmLawDC"
            app:layout_constraintEnd_toStartOf="@+id/button3OhmLawDC"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button1OhmLawDC"
            app:layout_constraintTop_toTopOf="@+id/button1OhmLawDC" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button3OhmLawDC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/i_p_r"
            android:background="@color/colorColumbiaBlue"
            app:layout_constraintBottom_toBottomOf="@+id/button2OhmLawDC"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button2OhmLawDC"
            app:layout_constraintTop_toTopOf="@+id/button2OhmLawDC" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button4OhmLawDC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/v_i_r"
            android:background="@color/colorColumbiaBlue"
            app:layout_constraintEnd_toStartOf="@+id/button5OhmLawDC"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button1OhmLawDC" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button5OhmLawDC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/v_p_i"
            android:background="@color/colorColumbiaBlue"
            app:layout_constraintBottom_toBottomOf="@+id/button4OhmLawDC"
            app:layout_constraintEnd_toStartOf="@+id/button6OhmLawDC"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button4OhmLawDC"
            app:layout_constraintTop_toTopOf="@+id/button4OhmLawDC" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button6OhmLawDC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/v_p_r"
            android:background="@color/colorColumbiaBlue"
            app:layout_constraintBottom_toBottomOf="@+id/button5OhmLawDC"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button5OhmLawDC"
            app:layout_constraintTop_toTopOf="@+id/button5OhmLawDC" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button7OhmLawDC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/p_i_v"
            android:background="@color/colorColumbiaBlue"
            app:layout_constraintEnd_toStartOf="@+id/button8OhmLawDC"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4OhmLawDC" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button8OhmLawDC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/p_i_u00b2_r"
            android:background="@color/colorColumbiaBlue"
            app:layout_constraintBottom_toBottomOf="@+id/button7OhmLawDC"
            app:layout_constraintEnd_toStartOf="@+id/button9OhmLawDC"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button7OhmLawDC"
            app:layout_constraintTop_toTopOf="@+id/button7OhmLawDC" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button9OhmLawDC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/p_v_u00b2_r"
            android:background="@color/colorColumbiaBlue"
            app:layout_constraintBottom_toBottomOf="@+id/button8OhmLawDC"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button8OhmLawDC"
            app:layout_constraintTop_toTopOf="@+id/button8OhmLawDC" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button10OhmLawDC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/r_v_i"
            android:background="@color/colorColumbiaBlue"
            app:layout_constraintEnd_toStartOf="@+id/button11OhmLawDC"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button7OhmLawDC" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button11OhmLawDC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/r_p_i_u00b2"
            android:background="@color/colorColumbiaBlue"
            app:layout_constraintBottom_toBottomOf="@+id/button10OhmLawDC"
            app:layout_constraintEnd_toStartOf="@+id/button12OhmLawDC"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button10OhmLawDC"
            app:layout_constraintTop_toTopOf="@+id/button10OhmLawDC" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button12OhmLawDC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorColumbiaBlue"
            android:text="@string/r_v_u00b2_p"
            app:layout_constraintBottom_toBottomOf="@+id/button11OhmLawDC"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button11OhmLawDC"
            app:layout_constraintTop_toTopOf="@+id/button11OhmLawDC"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorNeonYellow"
            android:text="@string/reset"
            android:textAllCaps="false"
            app:layout_constraintEnd_toStartOf="@+id/button14"
            app:layout_constraintStart_toStartOf="@+id/button11OhmLawDC"
            app:layout_constraintTop_toBottomOf="@+id/button11OhmLawDC" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorNeonYellow"
            android:text="@string/report"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="@+id/button13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button13"
            app:layout_constraintTop_toTopOf="@+id/button13" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>